# FastLZ

./: CMakeLists.txt  fastlz.c  fastlz.h
